[master] Fixed comments in swagger doc
