# api/swagger.yaml
@@ -1,11 +1,11 @@
 definitions:
-  dtos.ChangeUserSegmentsDto:
+  dto.ChangeUserSegmentsDto:
     description: Информация о добавляемых и удаляемых сегментах пользователя
     properties:
       add_to_user:
         description: Сегменты, которые будут добавляться пользователю (с датами отключения)
         items:
-          $ref: '#/definitions/dtos.SegmentWithDeadlineDate'
+          $ref: '#/definitions/dto.SegmentWithDeadlineDate'
         type: array
       take_from_user:
         description: Сегменты, которые будут удаляться у пользователя
@@ -13,7 +13,7 @@ definitions:
           type: string
         type: array
     type: object
-  dtos.CreateOrUpdateSegmentDto:
+  dto.CreateOrUpdateSegmentDto:
     description: Информация о сегменте при создании
     properties:
       description:
@@ -23,35 +23,35 @@ definitions:
         description: Название сегмента
         type: string
     type: object
-  dtos.CreateSegmentResponseDto:
+  dto.CreateSegmentResponseDto:
     description: Информация о сегменте при создании
     properties:
       slug:
         description: Название сегмента
         type: string
     type: object
-  dtos.CreateUserDto:
+  dto.CreateUserDto:
     description: Информация о пользователе при создании
     properties:
       name:
         description: Имя пользователя
         type: string
     type: object
-  dtos.CreateUserResponseDto:
+  dto.CreateUserResponseDto:
     description: Информация о пользователе при создании
     properties:
       id:
         description: Идентификатор пользователя
         type: integer
     type: object
-  dtos.ErrorDto:
+  dto.ErrorDto:
     description: Информация об ошибке (DTO)
     properties:
       error:
         description: Ошибка
         type: string
     type: object
-  dtos.SegmentDto:
+  dto.SegmentDto:
     description: Информация о сегменте
     properties:
       description:
@@ -64,7 +64,7 @@ definitions:
         description: Название сегмента
         type: string
     type: object
-  dtos.SegmentWithDeadlineDate:
+  dto.SegmentWithDeadlineDate:
     description: Информация о сегментах с датой отключения пользователя от сегмента
     properties:
       deadline_date:
@@ -74,7 +74,7 @@ definitions:
         description: Название сегмента
         type: string
     type: object
-  dtos.UpdateSegmentResponseDto:
+  dto.UpdateSegmentResponseDto:
     description: Информация о сегменте при обновлении
     properties:
       description:
@@ -87,7 +87,7 @@ definitions:
         description: Название сегмента
         type: string
     type: object
-  dtos.UserDto:
+  dto.UserDto:
     description: Информация о пользователе
     properties:
       id:
@@ -97,13 +97,13 @@ definitions:
         description: Имя пользователя
         type: string
     type: object
-  dtos.UsersActiveSegments:
+  dto.UsersActiveSegments:
     description: Информация об активных сегментах пользователя
     properties:
       segments:
         description: Список активных сегментов
         items:
-          $ref: '#/definitions/dtos.SegmentWithDeadlineDate'
+          $ref: '#/definitions/dto.SegmentWithDeadlineDate'
         type: array
       user_id:
         description: Идентификатор пользователя
@@ -128,12 +128,12 @@ paths:
           description: Все сегменты успешно получены
           schema:
             items:
-              $ref: '#/definitions/dtos.SegmentDto'
+              $ref: '#/definitions/dto.SegmentDto'
             type: array
         "500":
           description: Возникла внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
       summary: Получить семгенты
       tags:
       - segments
@@ -148,22 +148,22 @@ paths:
         name: Segment
         required: true
         schema:
-          $ref: '#/definitions/dtos.CreateOrUpdateSegmentDto'
+          $ref: '#/definitions/dto.CreateOrUpdateSegmentDto'
       produces:
       - application/json
       responses:
         "201":
           description: Сегмент успешно создан
           schema:
-            $ref: '#/definitions/dtos.CreateSegmentResponseDto'
+            $ref: '#/definitions/dto.CreateSegmentResponseDto'
         "400":
           description: Некорректные входные данные
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
         "500":
           description: Возникла внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
       summary: Добавить сегмент
       tags:
       - segments
@@ -187,15 +187,15 @@ paths:
         "400":
           description: Некорректные входные данные
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
         "404":
           description: Сегмент с данным названием не найден
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
         "500":
           description: Возникла внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
       summary: Удалить сегмент
       tags:
       - segments
@@ -216,19 +216,19 @@ paths:
         "200":
           description: Сегмент с данным названием успешно получен
           schema:
-            $ref: '#/definitions/dtos.SegmentDto'
+            $ref: '#/definitions/dto.SegmentDto'
         "400":
           description: Некорректные входные данные
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
         "404":
           description: Сегмент с данным названием не найден
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
         "500":
           description: Возникла внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
       summary: Получить сегмент
       tags:
       - segments
@@ -248,26 +248,26 @@ paths:
         name: сегменте
         required: true
         schema:
-          $ref: '#/definitions/dtos.CreateOrUpdateSegmentDto'
+          $ref: '#/definitions/dto.CreateOrUpdateSegmentDto'
       produces:
       - application/json
       responses:
         "200":
           description: Сегмент с данным названием успешно обновлен
           schema:
-            $ref: '#/definitions/dtos.UpdateSegmentResponseDto'
+            $ref: '#/definitions/dto.UpdateSegmentResponseDto'
         "400":
           description: Некорректные входные данные
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
         "404":
           description: Сегмент с данным названием не найден
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
         "500":
           description: Возникла внутренняя ошибка сервреа
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
       summary: Обновить сегмент
       tags:
       - segments
@@ -284,12 +284,12 @@ paths:
           description: Все пользователи успешно получены
           schema:
             items:
-              $ref: '#/definitions/dtos.UserDto'
+              $ref: '#/definitions/dto.UserDto'
             type: array
         "500":
           description: Возникла внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
       summary: Получить пользователей
       tags:
       - users
@@ -304,22 +304,22 @@ paths:
         name: User
         required: true
         schema:
-          $ref: '#/definitions/dtos.CreateUserDto'
+          $ref: '#/definitions/dto.CreateUserDto'
       produces:
       - application/json
       responses:
         "201":
           description: Пользователь успешно создан
           schema:
-            $ref: '#/definitions/dtos.CreateUserResponseDto'
+            $ref: '#/definitions/dto.CreateUserResponseDto'
         "400":
           description: Некорректные входные данные
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
         "500":
           description: Возникла внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
       summary: Добавить пользователя
       tags:
       - users
@@ -341,19 +341,19 @@ paths:
         "200":
           description: Пользователь с данным идентификатором успешно получен
           schema:
-            $ref: '#/definitions/dtos.UserDto'
+            $ref: '#/definitions/dto.UserDto'
         "400":
           description: Некорректные входные данные
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
         "404":
           description: Пользователь с данным идентификатором не найден
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
         "500":
           description: Возникла внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
       summary: Получить пользователя
       tags:
       - users
@@ -376,15 +376,15 @@ paths:
         "200":
           description: Активные сегменты пользователя успешно получены
           schema:
-            $ref: '#/definitions/dtos.UsersActiveSegments'
+            $ref: '#/definitions/dto.UsersActiveSegments'
         "404":
           description: Пользователь с данным идентификатором не найден
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
         "500":
           description: Возникла внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
       summary: Получить активные сегменты пользователя
       tags:
       - users
@@ -405,7 +405,7 @@ paths:
         name: сегментах
         required: true
         schema:
-          $ref: '#/definitions/dtos.ChangeUserSegmentsDto'
+          $ref: '#/definitions/dto.ChangeUserSegmentsDto'
       produces:
       - application/json
       responses:
@@ -414,15 +414,15 @@ paths:
         "400":
           description: Некорректные входные данные
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
         "404":
           description: Пользователь с данным идентификатором не найден
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/dtos.ErrorDto'
+            $ref: '#/definitions/dto.ErrorDto'
       summary: Изменить сегменты пользователя
       tags:
       - users
